docs/style.css
html {
    height: 100%;
    width: 100%;
}

body {
    width: 100%;
    min-width: 900px;
    height: inherit;
    background-color: #a4dada !important;
    /* background-color: coral; */
    /* position: absolute; */
}

.button-icon {
    image-rendering: crisp-edges;
    height: 50px;
}
.upbar-icon {
    image-rendering: crisp-edges;
    height: 50px;
}

#container {
    min-width: 900px;
    height: 95vh;
    width: 95vw;
    left: 50%;
    top: 40%;
    transform: translate(-50%, -50%);
    position: absolute;
    border-radius: 10px;
    display: block;
    /* overflow:hidden; */
    margin-top: 8vh;
}

#canva-container {
    position: relative;
    width: 100%;
    height: 100%;
    margin-top: 10px;
    left: 50%;
    top: 45%;
    transform: translate(-50%, -50%);
    overflow: hidden;
    padding-top: 5vh;
    padding-left: 9vw;
    padding-right: 9vw;
}

#canvas-div {
    position: inherit;
    background-color: #6d6d6d;
    
}

.canvases {
    position: inherit;
    width: 100%;
    height: 100%;
    z-index: 1;
    top: 0px;
    left: 0px;
    image-rendering: crisp-edges;
    /*border-radius: 10px;*/
    border: solid black 5px;
}

.sky {
    width: 100%;
    height: auto;
    bottom: 0%;
    image-rendering: crisp-edges;
    border-radius: 10px;
    z-index: 0;
}

.overlay {
    position: absolute;
}

#panel-container {
    width: 100%;
    width: 100%;
    display: block;
    text-align: center;
}

#init-panel {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.3);
    border-radius: 10px;
    opacity: 80%;
    z-index: 10;
}

#front-panel,
#start-panel {
    position: absolute;
    width: 60%;
    height: 60%;
    background-color: rgba(255, 255, 255, 1);
    border-radius: 10px;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 11;
    opacity: 1;
    padding: 20px;
    align-content: center;
    text-align: center;
    align-items: center;
    justify-content: center;
}

#title {
    text-align: center;
    top: 5%;
    margin: auto;
}

.nes-field {
    display: flex;
    position: absolute;
    width: 100%;
    margin: auto;
}

.word-input {
    width: 30%;
    margin: auto;
}

#ok-button {
    position: absolute;
    bottom: 5%;
    left: 50%;
    transform: translate(-50%);
}

.mood {
    position: absolute;
    width: 90%;
    height: min-content;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

.mood-slider-div {
    margin-top: 1%;
    position: absolute;
    display: flex;
    left: 50%;
    width: 90%;
    transform: translate(-50%);
}

.nes-progress {
    margin: 5px;
    height: 20px;
}

#button-container {
    position: absolute;
    display: flex;
    width: 90%;
    left: 50%;
    transform: translate(-50%);
    bottom: 2%;
}

.nes-btn {
    position: absolute;
    margin: auto;
}

#mood-slider,
#name-field1,
#name-field2 {
    width: calc((100%-2px)/2);
    height: calc((100%-4px)/6);
    flex-basis: auto;
}

p {
    position: static;
}

img {
    image-rendering: crisp-edges;
}


/*menu token element specification */

.token-image {
    position: absolute;
    width: 80%;
    /* left: 5px; */
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

.token-btn {
    background-color: rgb(248, 235, 183);
    height: 150px;
    width: 150px;
    /* margin: 10px; */
    align-content: center;
    left: 50%;
    transform: translate(-50%);
    position: relative;
    /* border: 3px solid; */
    z-index: 1;
}

.token-add{
    width: 60px;
    height: 150px;
    display: none;
    overflow: visible;
    position:relative;
    left: 80px;
    z-index: 2;
}

.token-plus{
}
.token-minus{
}
.token-div{
    height: 200px;
    width: 300px;
    display: inline-block;
    overflow: visible;
    padding: 10px;
    z-index: 1;
}
.token-div:hover .token-add{
    display:inline-block;
    overflow: visible;
    z-index: 2;
}

@-webkit-keyframes BLINK {
    0%,
    49% {
        background-color: rgb(245, 247, 99);
        /* height: 70px; */
        /* width: 70px; */
    }
    50%,
    100% {}
}

.token-btn:hover {
    /* background-color: rgb(247, 239, 210); */
    -moz-animation: BLINK 1s infinite;
}

.menu-container {
    position: absolute;
    width: 100%;
    height: 100%;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 25;
    border: solid;
    border-width: 4px;
    display: inline-flex;
    margin: auto;
    background-color: rgb(155, 211, 202);
    border-radius: 10px;
    /* height: max-content; */
    padding-bottom: 10vh;
}

#tokenGrid {
    display: grid;
    grid-template-columns: auto auto auto auto;
    
}

.token-btn-container {
    display: grid;
    width: 100%;
    display: block;
    margin: auto;
    padding-top: 8vh;
    padding-right: 7%;
    padding-bottom: 17vh;
    padding-left: 7%;
}



.token-btn-div {
    width: 100%;
    display: flex;
    margin: auto;
}

.selected-btn {
    background-color: lightgreen !important;
}

.arrow {
    border: solid black;
    border-width: 0 3px 3px 0;
    display: inline-block;
    padding: 3px;
}
.div-back {
    background-color: #a4dada;
}
.up {
    transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
}

#upbar {
    /*overflow: hidden;*/
    background-color: rgb(105, 201, 206);
    position: fixed;
    top: 0;
    width: 100%;
    /*padding: 1vh;*/
    display: flex;
    justify-content: space-around;
    transition: top 0.5s;
}
#upbar a {
    float: left;
    display: block;
    color: white;
    text-align: center;
    text-decoration: none;
  }
.upbar-names {
    padding: 15px;
}
  #upbar a:hover {
    background-color: #ffffff;
    color: black;
  }


.navbar {
    /*overflow: hidden;*/
    background-color: rgb(105, 201, 206);
    position: fixed;
    bottom: 0;
    width: 100%;
    padding: 1vh;
    display: flex;
    justify-content: space-around;
}

#nav-button-container {
    min-width: 900px;
    display: inline-flex;
    position: absolute;
    /* bottom: -21%; */
    text-align: justify;
    align-content: center;
    width: 100%;
    left: 50%;
    transform: translate(-50%);
    /* background-color: rgba(226, 158, 55, 0.50); */
    padding: 1vh;
    border-radius: 5px;
    /* border: solid 2px black; */
}

.nav-btn {
    margin: auto !important;
    /*background-color: beige !important;*/
    padding: 10px !important;
    padding-left: 20px !important;
    padding-right: 20px !important;
    font-size: 140%;
}
.bar-btn {margin: auto !important;}

#mytone {
    position: absolute;
    bottom: 2%;
    left: 2%;
}


/*loadingPage code BEGIN*/

.loader-wrapper {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-color: #242f3f;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

#loadingId {
    display: inline-block;
    position: relative;
    width: 60%;
}


/*loadingPage code END*/






.dropbtn {
    background-color: #92cc41;
    color: white;
    padding: 16px;
    font-size: 16px;
    border: none;
    /* cursor: pointer; */
  }
  
  /* The container <div> - needed to position the dropdown content */
  .dropdown {
    position: relative;
    display: inline-block;
  }
  
  /* Dropdown Content (Hidden by Default) */
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: #fc0000;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  
  /* Links inside the dropdown */
  .dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
  }
  
  /* Change color of dropdown links on hover */
  .dropdown-content a:hover {background-color: #f1f1f1}
  
  /* Show the dropdown menu on hover */
  .dropdown:hover .dropdown-content {
    display: block;
  }
  
  /* Change the background color of the dropdown button when the dropdown content is shown */
  .dropdown:hover .dropbtn {
    background-color: #3e8e41;
  }


  /*dropup volume content*/
#volume-container{
}

.slider-wrapper {
    display: inline-block;
    width: 20px;
    height: 150px;
    padding: 0;
  }
  .slider-wrapper input {
    width: 170px;
    height: 20px;
    margin: 0;
    transform-origin: 85px 85px;
    transform: rotate(-90deg);
  } 

.dialog-padding {
    padding-top: 5vh;
    padding-bottom: 5vh;
}



  .dropup {
    /* position: relative;
    display: inline-block; */
  }
  .dropup-content {
    /*background-color: #3e8e41;*/ 
    display: none;
    position: absolute;
    bottom: 80px;
    min-width: 100px;
    height: 190px;
    /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
    z-index: 1;
  }
.dropup:hover .dropup-content {
  display: block;
}
.center-slider {
    position:absolute;
    transform: translate(-50%);
    left: 50%;
}

:root {
    --input-thumb-size: 15px;
}
.nes-progress {
    width: auto;
    height: 15px;
    color: black;
  }

/*thumb slider modification*/  

input[type='range']::-webkit-slider-thumb {
    box-shadow: 0px 0px 0px #ffffff;
    border: 0px solid #000000;
    height: var(--input-thumb-size);
    width: var(--input-thumb-size);
    border-radius: 0px;
    background: #777777;
    /* cursor: pointer; */
    -webkit-appearance: none;
  }
  input[type='range']::-moz-range-thumb {
    box-shadow: 0px 0px 0px #ffffff;
    border: 0px solid #000000;
    height: var(--input-thumb-size);
    width: var(--input-thumb-size);
    border-radius: 0px;
    background: #777777;
    /* cursor: pointer; */
  }
  input[type='range']::-ms-thumb {
    margin-top: 1px;
    box-shadow: 0px 0px 0px #ffffff;
    border: 0px solid #000000;
    height: var(--input-thumb-size);
    width: var(--input-thumb-size);
    border-radius: 0px;
    background: #777777;
    /* cursor: pointer; */
  }

